--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,16 +33,18 @@ layout: default
   </div>
   
   <div class="row">
-     
-
+     <div class="col-md-12">
+       <h2 class="section-heading mb-5">Recent Projects</h2>
+      </div>
         <!-- Home Post List -->
-        {% for post in site.posts limit : 9 %}
-     <div class="col-lg-3 col-md-4 col-sm-6">
+        {% for post in site.portfolio limit : 9 %}
+     <div class="col-md-4 col-sm-6">
 
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
+            <img src="{{ post.front-image }}" alt="{{ post.front-image-alt }}" />
             <h2 class="post-title">{{ post.title }}</h2>
-            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+            <h3 class="post-subtitle">{{ post.project-date }}</h3>
           </a>
         </article>
 
@@ -50,10 +52,13 @@ layout: default
 
         {% endfor %}
 
+    
         <!-- Pager -->
+      <div class="col-md-12">
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Portfolio Items &rarr;</a>
+          <a class="btn btn-primary" href="{{"/posts" | relative_url }}">View All Portfolio Items &rarr;</a>
         </div>
+      </div>
 
 
     </div>
@@ -61,12 +66,13 @@ layout: default
   
   <div class="container">
     <div class="row">
-      
-        
+      <div class="col-md-12">
+        <h2 class="section-heading mb-5">Recent Posts</h2>
+      </div>
         <!-- Home Post List -->
-        {% for post in site.posts limit : 3 %}
+        {% for post in site.posts limit : 2 %}
 
-      <div class="col-lg-4 col-md-6 mx-auto">
+      <div class="col-md-6 mx-auto blog-posts">
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
             <h2 class="post-title">{{ post.title }}</h2>
