--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,4 +31,11 @@ layout: default
 
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4 mx-auto">
+      {% if page.last-updated %}
+        <span class="fine-print">Last updated on {{ page.last-updated }}</span>
+      {% endif %}
+      </div>
+    </div>
   </div>
