--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -21,9 +21,11 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-2 col-md-3">
-        <p><i class="far fa-calendar-alt"></i>Completed in <strong>{{ page.project-date }}</strong></p>
+        <p><i class="far fa-calendar-alt"></i>Completed in <strong>{{ page.project-date | date: '%B %Y' }}</strong></p>
         <p><i class="fas fa-user-cog"></i>I did <strong>{{ page.work-type }}</strong> work in this project</p>
+        {% if page.site-type %}
         <p><i class="fas fa-laptop-code"></i>This work was for a <strong>{{ page.site-type }}</strong></p>
+        {% endif %}
       </div>
       <div class="col-lg-8 col-md-9 mx-auto">
 
