--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,7 +32,7 @@ layout: default
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 mx-auto">
+      <div class="col-md-4 mx-auto updated-date">
       {% if page.last-updated %}
         <span class="fine-print">Last updated on {{ page.last-updated }}</span>
       {% endif %}
