--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -20,14 +20,7 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-3 project-details">
-        <p><i class="far fa-calendar-alt fa-fw"></i> Completed in {{ page.project-date | date: '%B %Y' }}</p>
-        <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type }} work in this project</p>
-        {% if page.site-type %}
-        <p><i class="fas fa-laptop-code fa-fw"></i> This work was for a {{ page.site-type }}</p>
-        {% endif %}
-      </div>
-      <div class="col-lg-9 col-md-9 mx-auto">
+      <div class="col-lg-9 col-md-9">
 
         {{ content }}
 
@@ -46,6 +39,13 @@ layout: default
 
         </div>
 
+      </div>
+      <div class="col-lg-3 col-md-3 project-details">
+        <p><i class="far fa-calendar-alt fa-fw"></i> Completed in {{ page.project-date | date: '%B %Y' }}</p>
+        <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type }} work in this project</p>
+        {% if page.site-type %}
+        <p><i class="fas fa-laptop-code fa-fw"></i> This work was for a {{ page.site-type }}</p>
+        {% endif %}
       </div>
     </div>
   </div>
