Added new project shells
Added shells for more recent projects. Commented out Posts section from homepage. Minor updates to About page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,18 +64,18 @@ layout: default
       <!-- Pager -->
       <div class="col-md-12">
         <div class="clearfix">
-          <a class="btn btn-primary" href="{{"/posts" | relative_url }}">View All Portfolio Items &rarr;</a>
+          <a class="btn btn-primary" href="{{"/portfolio" | relative_url }}">View All Portfolio Items &rarr;</a>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-12">
         <h2 class="section-heading mb-4">Recent Posts</h2>
       </div>
-      <!-- Home Post List -->
+      <!-- Home Post List 
       {% for post in site.posts limit : 2 %}
 
       <div class="col-md-6 mx-auto blog-posts mb-3">
@@ -103,11 +103,11 @@ layout: default
       {% endfor %}
 
       <div class="col-md-12">
-        <!-- Pager -->
+        <!-- Pager
         <div class="clearfix">
           <a class="btn btn-primary" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
         </div>
       </div>
 
     </div>
-  </div>
+  </div> -->
