--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@ layout: default
       <!-- Pager -->
       <div class="col-md-12">
         <div class="clearfix">
-          <a class="btn btn-primary" href="{{"/portfolio" | relative_url }}">View All Portfolio Items &rarr;</a>
+          <a class="btn btn-primary" href="{{"/portfolio" | relative_url }}">View All Recent Projects &rarr;</a>
         </div>
       </div>
     </div>
