--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -12,6 +12,13 @@ layout: default
             {% if page.subtitle %}
             <p class="subheading">{{ page.subtitle }}</p>
             {% endif %}
+            <div class="project-details">
+              <p><i class="far fa-calendar-alt fa-fw"></i> Completed in {{ page.project-date | date: '%B %Y' }}</p>
+              <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type }} work in this project</p>
+              {% if page.site-type %}
+              <p><i class="fas fa-laptop-code fa-fw"></i> This project was for a {{ page.site-type }}</p>
+              {% endif %}
+            </div>
           </div>
         </div>
       </div>
@@ -23,15 +30,6 @@ layout: default
     <div class="row">
       <div class="col-lg-12 col-md-12">
 
-       
-
-        <div class="col-lg-12 col-md-12 project-details">
-          <p><i class="far fa-calendar-alt fa-fw"></i> Completed in {{ page.project-date | date: '%B %Y' }}</p>
-          <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type }} work in this project</p>
-          {% if page.site-type %}
-          <p><i class="fas fa-laptop-code fa-fw"></i> This work was for a {{ page.site-type }}</p>
-          {% endif %}
-        </div>
         <hr>
 
         <div class="clearfix">
