--- a/_layouts/portfolio-item.html
+++ b/_layouts/portfolio-item.html
@@ -14,7 +14,7 @@ layout: default
             {% endif %}
             <div class="project-details">
               <p><i class="far fa-calendar-alt fa-fw"></i> Completed in {{ page.project-date | date: '%B %Y' }}</p>
-              <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type }} work in this project</p>
+              <p><i class="fas fa-user-cog fa-fw"></i> I did {{ page.work-type | downcase }} work in this project</p>
               {% if page.site-type %}
               <p><i class="fas fa-laptop-code fa-fw"></i> This project was for a {{ page.site-type }}</p>
               {% endif %}
