adds work with me page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,10 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/portfolio" | relative_url }}">Projects</a>
+          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ "/portfolio" | relative_url }}">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
