fixes footer copy email to clipboard button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,9 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto text-center">
         <p class="contact">Want to get in touch? Send me a message at 
-          <button type="button" class="btn btn-primary" data-mdb-clipboard-text="This text is a test text rawr!" data-toggle="tooltip" data-placement="top" title="Copy to clipboard">
+          <button id="copy-button" type="button" class="btn btn-primary" data-clipboard-text="{{ site.email | encode_email }}" data-toggle="tooltip" data-placement="top" title="Copy to clipboard">
             haleyhopper22@gmail.com
           </button>
-          https://codepen.io/OasesOng/pen/WBWpVK
-          https://jsfiddle.net/bababalcksheep/n4xbpcs3/
         </p>
         <hr>
       </div>
