--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<footer>
+<footer id="footer">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto text-center">
