--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,11 +15,11 @@
           <a class="nav-link" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/portfolio" | relative_url }}">Portfolio</a>
+          <a class="nav-link" href="{{ "/projects" | relative_url }}">Featured Projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
