--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
 
     <div class="row row-cols-1 row-cols-md-2">
       <!-- Home Recent Portfolio List -->
-      {% assign projects = site.portfolio | sort: 'project-date' | reverse %}
+      {% assign projects = site.projects | sort: 'project-date' | reverse %}
       {% for post in projects limit : 2 %}
       <div class="col mb-5">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}" class="card h-100 project-preview">
