--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+    <!--<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
     </button>
@@ -11,16 +12,16 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
-        <!--<li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
-        </li>-->
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/projects" | relative_url }}">Featured Projects</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
-        </li> -->
+        </li> 
       </ul>
-    </div>
+    </div>-->
   </div>
 </nav>
