--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,27 +1,28 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-sm navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
-    <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
-    <!--<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
     </button>
+    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
+
     <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
-        </li>
+        </li>-->
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/projects" | relative_url }}">Featured Projects</a>
+          <a class="nav-link" href="{{ "/projects" | relative_url }}">Projects</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
-        </li> 
+        </li>-->
       </ul>
-    </div>-->
+      <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+    </div>
   </div>
 </nav>
