adds navigation links to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,30 +2,24 @@
 
 <footer id="footer">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-3 col-md-6 mx-auto text-center">
-        <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+    <nav class="row align-items-center">
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="{{"/about" | relative_url }}">About</a>
       </div>
-      <div class="col-lg-3 col-md-6 mx-auto text-center">
-        <a class="nav-link" href="{{ "/projects" | relative_url }}">Featured Projects</a>
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="{{ "/projects" | relative_url }}">Featured Projects</a>
       </div>
-      <div class="col-lg-3 col-md-6 mx-auto text-center">
-        <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="{{ "/posts" | relative_url }}">Blog</a>
       </div>
-      <div class="col-lg-3 col-md-6 mx-auto text-center">
-        <a class="nav-link" href="{{"/contact" | relative_url }}">Contact Me</a>
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="{{"/contact" | relative_url }}">Contact Me</a>
       </div>
-    </div>
+      <div class="col-lg-2 col-md-6 mx-auto text-center">
+        <a class="btn btn-primary">Inquire</a>
+      </div>
+    </nav>
     <hr>
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto text-center">
-        <p class="contact">Want to get in touch? Send me a message at 
-          <button id="copy-button" type="button" class="btn btn-primary" data-clipboard-text="{{ site.email | encode_email }}" data-toggle="tooltip" data-placement="top" title="Copy to clipboard">
-            haleyhopper22@gmail.com
-          </button>
-        </p>
-      </div>
-    </div>
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
