adds inquire page link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <a href="{{"/contact" | relative_url }}">Contact Me</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto text-center">
-        <a class="btn btn-primary">Inquire</a>
+        <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
       </div>
     </nav>
     <hr>
