removes blog & adds work link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
   <div class="container">
     <nav class="row align-items-center">
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
-        <a href="{{"/about" | relative_url }}">About</a>
+        <a href="{{"/work-with-me" | relative_url }}">Work with Me</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{ "/projects" | relative_url }}">Featured Projects</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
-        <a href="{{ "/posts" | relative_url }}">Blog</a>
+        <a href="{{"/about" | relative_url }}">About</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{"/contact" | relative_url }}">Contact Me</a>
