tweaks to page templates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
             
             <h2 class="subheading">Tell your unique story and attract the right customers with your branding</h2>
             
-            <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+            <a class="btn btn-secondary mt-3" href="{{"/inquire" | relative_url }}">Inquire</a>
           </div>
         </div>
       </div>
