hides work with me page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
 <footer id="footer">
   <div class="container">
     <nav class="row align-items-center">
-      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+      <!--<div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{"/work-with-me" | relative_url }}">Work with Me</a>
-      </div>
+      </div>-->
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{ "/projects" | relative_url }}">Featured Projects</a>
       </div>
