adds pinterest site verification code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,6 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#ffffff">
+  <meta name="p:domain_verify" content="6e0b813a3447b85660cc0160f3bdc21b"/>
 
 </head>
