add client login link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,9 @@
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{"/contact" | relative_url }}">Contact Me</a>
       </div>
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="https://haleyhopperdesign.hbportal.co/app/">Client Login</a>
+      </div>
       <div class="col-lg-2 col-md-6 mx-auto text-center">
         <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
       </div>
