updates fontawesome classes
updates css calls to fontawesome to latest version

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,8 @@
           <li class="list-inline-item">
             <a href="mailto:{{ site.email | encode_email }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="far fa-envelope fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-solid fa-envelope fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -40,8 +40,8 @@
           <li class="list-inline-item">
             <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -50,8 +50,8 @@
           <li class="list-inline-item">
             <a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-facebook-f fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -60,8 +60,8 @@
           <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -70,8 +70,8 @@
           <li class="list-inline-item">
             <a href="https://github.com/{{ site.github_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -80,8 +80,8 @@
           <li class="list-inline-item">
             <a href="https://instagram.com/{{ site.instagram_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-instagram fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -90,8 +90,8 @@
           <li class="list-inline-item">
             <a href="https://pinterest.com/{{ site.pinterest_username }}" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-pinterest fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-pinterest fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
