--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,8 +42,8 @@ layout: default
           <img src="{{ post.front-image }}" class="card-img-top" alt="{{ post.front-image-alt }}" />
           <div class="card-img-overlay">
             <span class="fa-stack fa-2x">
-              <i class="fas fa-circle fa-stack-2x"></i>
-              <i class="fas fa-long-arrow-alt-right fa-stack-1x fa-inverse"></i>
+              <i class="fa-solid fa-circle fa-stack-2x"></i>
+              <i class="fa-solid fa-long-arrow-alt-right fa-stack-1x fa-inverse"></i>
             </span>
           </div>
           <div class="card-body">      
