--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
         <a href="{{"/about" | relative_url }}">About</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
+        <a href="{{"/work-with-me" | relative_url }}">Work with Me</a>
+      </div>
+      <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
         <a href="{{"/contact" | relative_url }}">Contact Me</a>
       </div>
       <div class="col-lg-2 col-md-6 mx-auto mb-3 mb-lg-0 text-center">
