adds work with me link to navigation

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,9 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
-        <!--<li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
-        </li>-->
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/projects" | relative_url }}">Projects</a>
         </li>
