changes homepage hero text, updates fontawesome classes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,13 +11,9 @@ layout: default
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>Have a brand the competition is jealous of</h1>
-            
-            <h2 class="subheading">Tell your unique story and attract the right customers with your branding</h2>
-            
-            <a class="btn btn-secondary mt-3" href="{{"/inquire" | relative_url }}">Inquire</a>
+            <h1 class="moderate">Hi,&nbsp;I'm&nbsp;Haley, <span>a meticulous creative balanced at the intersection of design and web development</span></h1>
           </div>
         </div>
       </div>
@@ -42,8 +38,8 @@ layout: default
           <img src="{{ post.front-image }}" class="card-img-top" alt="{{ post.front-image-alt }}" />
           <div class="card-img-overlay">
             <span class="fa-stack fa-2x">
-              <i class="fa-solid fa-circle fa-stack-2x"></i>
-              <i class="fa-solid fa-long-arrow-alt-right fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-circle fa-stack-2x"></i>
+              <i class="fas fa-long-arrow-alt-right fa-stack-1x fa-inverse"></i>
             </span>
           </div>
           <div class="card-body">      
